# Music2

./: CMakeLists.txt
Main/: Music.h  Music.ui  Music2.cpp  main.cpp
addMusic/: addMusic.cpp  addMusic.h  addMusic.ui
